# trie_hard

./: .gitignore  readme.md  test_data.txt
.github/workflows/: benchmark.yml  go_benchmark.yml  go_test.yml  rust_benchmark.yml  rust_test.yml
C#/: TrieHard.sln
C#/TrieHard/: IIndexable.cs  IReadOnlyArray.cs  ITrie.cs  TrieBlock.cs  TrieHard.csproj
C#/TrieHard/Unsafe/: UnsafeArrayString.cs  UnsafeArrayTrie.cs  UnsafeReadOnlyArray.cs
cpp/: .gitignore  CMakeLists.txt  Doxyfile  Trie.h  Trie.hpp  TrieNode.h  TrieNode.hpp  conanfile.py  main.cpp
cpp/include/: Trie.hpp  TrieNode.hpp
cpp/src/: main.cpp
go/: benchmark.txt  benchmark_test.go  go.mod  go.sum  trie.go  trieNode.go  trieNode_test.go  trie_test.go
go/scripts/: benchmark.sh
nim/: triehard.nimble
nim/src/: triehard.nim
nim/tests/: test1  test1.nim
rust/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
rust/.github/workflows/: benchmark.yml
rust/benches/: trie_benchmarks.rs
rust/cpp/: Trie.h  Trienode.h
rust/src/: lib.rs  trie.rs  trie_node.rs
